# rust-interface

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmds/: start.rs
crates/rlbot/: Cargo.toml
crates/rlbot/examples/: packet_logger.rs  start_match.rs  stop_match.rs
crates/rlbot/examples/atba_agent/: bot.toml  main.rs
crates/rlbot/examples/atba_hivemind/: main.rs
crates/rlbot/examples/atba_raw/: bot.toml  main.rs
crates/rlbot/examples/example_script/: main.rs  script.toml
crates/rlbot/examples/high_jump_script/: main.rs  script.toml
crates/rlbot/src/: agents.rs  hivemind.rs  lib.rs  scripts.rs  util.rs
crates/rlbot_flat/: Cargo.toml  build.rs
crates/rlbot_flat/src/: lib.rs  planus_flat.rs
examples/: atba_agent.rs  atba_raw.rs  basic.rs  start_match.rs  stop_match.rs
examples/atba_agent/: bot.toml  main.rs
examples/atba_raw/: bot.toml  main.rs
lib/: Cargo.toml  rlbot.fbs
lib/examples/: atba.rs  basic.rs  simple_atba.rs  start_match.rs
lib/src/: bots.rs  lib.rs
lib/src/flat_wrapper/: mod.rs  rlbot_generated.rs
rlbot/: Cargo.toml
rlbot/examples/atba_agent/: bot.toml
rlbot/examples/atba_hivemind/: bot.toml
rlbot/examples/atba_raw/: bot.toml
rlbot/examples/high_jump_script/: main.rs  script.toml
rlbot/src/: agents.rs  lib.rs  scripts.rs  util.rs
rlbot_flat/: Cargo.toml  build.rs
src/: agents.rs  flat_wrapper.rs  lib.rs  rlbot_generated.rs  util.rs
src/flat_wrapper/: mod.rs
