[package]
name = "rlbot-interface"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kanal = { version = "0.1.0-pre8", default-features = false }
glam = { version = "0.27.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.50"
planus = "1.0.0"

[features]
default = ["glam"]
glam = ["dep:glam"]

[build-dependencies]
planus-translation = "1.0.0"
planus-codegen = "1.0.0"
