[package]
name = "rlbot-interface"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
kanal = { version = "0.1.0-pre8" }
glam = { version = "0.27.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.50"
planus = "1.0.0"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"

[features]
default = ["glam"]
glam = ["dep:glam"]

[build-dependencies]
planus-translation = "1.0.0"
planus-codegen = "1.0.0"
