[package]
name = "rlbot-interface"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
kanal = { version = "0.1.0-pre8", default-features = false }
glam = { version = "0.27.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.50"
planus = "1.0.0"
swap-buffer-queue = { version = "0.2.1", features = ["std"] }

[features]
default = ["glam"]
glam = ["dep:glam"]

[build-dependencies]
planus-translation = "1.0.0"
planus-codegen = "1.0.0"
