[package]
name = "rlbot-match-manager-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rlbot-mm"
path = "src/main.rs"

[dependencies]
automod = "1.0.13"
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.20"
rlbot-match-manager-lib = { path = "../lib" }
