[package]
name = "rlbot"
version.workspace = true
edition = "2024"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kanal = { version = "0.1.1", default-features = false }
thiserror = "2.0.12"
rlbot_flat = { path = "../rlbot_flat" }

[features]
default = ["glam"]
glam = ["rlbot_flat/glam"]

[lints.clippy]
all = "warn"
