[package]
name = "rlbot_flat"
version.workspace = true
edition = "2024"
license-file.workspace = true

[dependencies]
planus = "1.1.1"
serde = { version = "1.0.210", features = ["derive"] }
glam = { version = "0.30.0", optional = true }

[build-dependencies]
planus-translation = "1.1.1"
planus-codegen = "1.1.1"

[features]
default = ["glam"]
glam = ["dep:glam"]
