[package]
name = "rlbot_flat"
version.workspace = true
edition = "2024"
license-file.workspace = true

[dependencies]
planus = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
serde = { version = "1.0.210", features = ["derive"] }
glam = { version = "0.30.0", optional = true }

[build-dependencies]
planus-translation = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-codegen = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }

[features]
default = ["glam"]
glam = ["dep:glam"]
