[package]
name = "rlbot"
version.workspace = true
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
kanal = { version = "0.1.0-pre8", default-features = false }
thiserror = "1.0.50"
rlbot_flat = { path = "../rlbot_flat" }

[features]
default = ["glam"]
glam = ["rlbot_flat/glam"]
