[package]
name = "rlbot_flat"
version.workspace = true
edition = "2021"
license-file.workspace = true

[dependencies]
planus = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
glam = { version = "0.27.0", optional = true }

[build-dependencies]
planus-translation = "1.0.0"
planus-codegen = "1.0.0"

[features]
default = ["glam"]
glam = ["dep:glam"]
